# AiLegalShield

./: .gitignore  README.md
backend/: langchain_setup.py  legal_analyzer.py  main.py  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/api/endpoints/: chat.py  contracts.py
backend/app/core/: exceptions.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  file_service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/src/: App.jsx  middleware.ts
frontend/src/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/component/: AnalysisResult.tsx  Background.tsx  ChatHistory.tsx  ChatInterface.tsx  ChatSection.tsx  ContractAnalyzer.tsx  Dashboard.tsx  FileUploader.tsx  Footer.tsx  Header.tsx  Hero.tsx  Layout.tsx  Sidebar.tsx  Templates.tsx  navbar.tsx
frontend/src/components/: ChatHistory.tsx  ContractUploader.jsx  Hero.tsx
frontend/src/services/: api.js
frontend/src/types/: chat.ts
frontend/src/utils/: riskColors.ts  types.ts
